@@ -59,6 +59,7 @@ private Q_SLOTS:
 private:
     const QStringList &deviceCache();
     void introspect(const QString & path, bool checkOptical = false);
+    void updateBackend(const QString & udi);
     QSet<Solid::DeviceInterface::Type> m_supportedInterfaces;
     org::freedesktop::DBus::ObjectManager m_manager;
     QStringList m_deviceCache;
